<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">VoyMate</string>
    <string name="app_name_hi" translatable="false">वोयमेट</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">VoyMate App</string>
    <string name="nav_header_subtitle" translatable="false">voymateapp@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_welcome" translatable="false">Home Screen</string>
    <string name="next" translatable="false">NEXT</string>
    <string name="skip" translatable="false">SKIP</string>
    <string name="start" translatable="false">GOT IT</string>
    <string name="slide_1_title" translatable="false">Religious Place</string>
    <string name="slide_1_desc" translatable="false">The easiest way to find out Religious Places!</string>
    <string name="slide_2_title" translatable="false">Monuments</string>
    <string name="slide_2_desc" translatable="false">To know history about monuments!</string>
    <string name="slide_3_title" translatable="false">Book Hotels!</string>
    <string name="slide_3_desc" translatable="false">Best way to book a hotel</string>
    <string name="slide_4_title" translatable="false">World Travel</string>
    <string name="slide_4_desc" translatable="false">It is a guider for you for your world travel!</string>
    <string name="play_again_desc" translatable="false">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="google_key">AIzaSyAGPF0HDsgWWWDXnYB3Ee5EtBEy7gUYS2A</string>
    <string name="place_key">AIzaSyAGPF0HDsgWWWDXnYB3Ee5EtBEy7gUYS2A</string>
    <string name="red_hint">The Red Fort is a historic fort in the city of Delhi. It was the main residence of the emperors of the Mughal dynasty for nearly 200 years, until 1856.</string>
    <string name="hred_hint">लाल किला दिल्ली शहर में एक ऐतिहासिक किला है। 1856 तक लगभग 200 वर्षों तक मुगल राजवंश के सम्राटों का यह मुख्य निवास था।</string>
    <string name="fred_hint">"Le Fort Rouge est un fort historique dans la ville de Delhi. Il a été la résidence principale des empereurs de la dynastie moghole pendant près de 200 ans, jusqu'en 1856."</string>
    <string name="dillihaat_hint">Dilli Haat is a paid-entrance open-air food plaza and craft bazaar located in Delhi, run by Delhi Tourism and Transportation Development Corporation (DTTDC). Unlike the traditional weekly market, the village Haat, Dilli Haat is permanent. It is located in the commercial centres of South Delhi, opposite INA market.</string>
    <string name="fdillihaat_hint">"Dilli Haat est un marché d'alimentation en plein air et un bazar artisanal à Delhi, géré par la Delhi Tourism and Transportation Development Corporation (DTTDC). Contrairement au marché hebdomadaire traditionnel, le village de Haat, Dilli Haat est permanent. Il est situé dans les centres commerciaux de South Delhi, en face du marché INA."</string>
    <string name="hdillihaat_hint">"दिल्ली टूरिज्म एंड ट्रांसपोर्टेशन डेवलपमेंट कॉरपोरेशन (डीटीटीडीसी) द्वारा संचालित दिल्ली में स्थित डिली हाट एक पेड-प्रवेश ओपन-एयर फूड प्लाजा और क्राफ्ट बाजार है। पारंपरिक साप्ताहिक बाजार के विपरीत, गांव हाट, दीली हाट स्थायी है। यह आईएनए बाजार के विपरीत, दक्षिण दिल्ली के वाणिज्यिक केंद्रों में स्थित है।"</string>
    <string name="taj_hint">"An immense mausoleum of white marble, built in Agra by Mughal Emperor Shah Jahan in memory of his wife Mumtaz Mahal. Taj Mahal is the jewel of Muslim art in India and one of the universally admired masterpieces of the world's heritage."</string>
    <string name="htaj_hint">"अपनी पत्नी मुमताज महल की याद में मुगल सम्राट शाहजहां द्वारा आगरा में निर्मित सफेद संगमरमर का एक विशाल मकबरा। ताजमहल भारत में मुस्लिम कला का गहना है और दुनिया की विरासत की सार्वभौमिक प्रशंसनीय कृतियों में से एक है।"</string>
    <string name="ftaj_hint">"Un immense mausolée de marbre blanc, construit à Agra par l'empereur moghol Shah Jahan en mémoire de sa femme Mumtaz Mahal. Taj Mahal est le joyau de l'art musulman en Inde et l'un des chefs-d'œuvre universellement admirés du patrimoine mondial."</string>
    <string name="akshardham_hint">Akshardham or Swaminarayan Akshardham complex is a Hindu mandir, and a spiritual-cultural campus in New Delhi, India.Also referred to as Akshardham Temple or Swaminarayan Akshardham, the complex displays millennia of traditional Hindu and Indian culture, spirituality, and architecture.</string>
    <string name="fakshardham_hint">"Akshardham ou Swaminarayan Akshardham complexe est un mandir hindou, et un campus spirituel-culturel à New Delhi, Inde.Aussi appelé Akshardham Temple ou Swaminarayan Akshardham, le complexe affiche des millénaires de la culture hindoue et indienne traditionnelle, la spiritualité et l'architecture."</string>
    <string name="hakshardham_hint">"अक्षरधाम कहां स्वामीनारायण अक्षरधाम परिसर में एक अनिवार्य हिंदू, और एक परिसर भावनात्मक संस्कृति है नई दिल्ली, इंडी। ऑस्ट्रेलियाई अपक्षेत्र मंदिर कहां स्वामीनारायण अक्षरधाम, ले कॉम्प्लेक्स एफ़िच डेस मिलनेनेरेस डे ला कल्चर हिंडौ एट इंडियन परंपरा, ला आध्यात्मिकता और एल वास्तुकला।"</string>
    <string name="english">The Red Fort is a historic fort in the city of Delhi. It was the main residence of the emperors of the Mughal dynasty for nearly 200 years, until 1856. It is located in the center of Delhi and houses a number of museums. In addition to accommodating the emperors and their households, it was the ceremonial and political center of the Mughal state and the setting for events critically impacting the region.Constructed in 1639 by the fifth Mughal Emperor Shah Jahan as the palace of his fortified capital Shahjahanabad, the Red Fort is named for its massive enclosing walls of red sandstone and is adjacent to the older Salimgarh Fort, built by Islam Shah Suri in 1546. The imperial apartments consist of a row of pavilions, connected by a water channel known as the Stream of Paradise (Nahr-i-Bihisht). The fort complex is considered to represent the zenith of Mughal creativity under Shah Jahan and although the palace was planned according to Islamic prototypes, each pavilion contains architectural elements typical of Mughal buildings that reflect a fusion of Timurid and Persian traditions. The Red Fort’s innovative architectural style, including its garden design, influenced later buildings and gardens in Delhi, Rajasthan, Punjab, Kashmir, Braj, Rohilkhand and elsewhere.</string>
    <string name="hindi">लाल किला दिल्ली शहर में एक ऐतिहासिक किला है। यह लगभग 200 वर्षों के लिए मुगल वंश के सम्राटों का मुख्य निवास था, 1856 तक। यह दिल्ली के केंद्र में स्थित है और कई संग्रहालय हैं। सम्राटों और उनके परिवारों को समायोजित करने के अलावा, यह मुगल राज्य का औपचारिक और राजनीतिक केंद्र था और इस क्षेत्र को गंभीर रूप से प्रभावित करने वाले घटनाओं की स्थापना।अपने गढ़वाले राजधानी शाहजहांबाद के महल के रूप में पांचवें मुगल सम्राट शाहजहां द्वारा 1639 में निर्मित लाल किले लाल बलुआ पत्थर की विशाल दीवारों के नाम पर रखा गया है और यह 1546 में इस्लाम शाह सूरी द्वारा निर्मित पुराने सलीमगढ़ किले के निकट है। शाही अपार्टमेंट में मंडप की एक पंक्ति होती है, जो एक जल चैनल से जुड़ा है जिसे स्वर्ग की धारा (नहर-ए-बिहिशत) के नाम से जाना जाता है। किले परिसर शाहजहां के अधीन मुग़ल रचनात्मकता के चरमपंथ का प्रतिनिधित्व करने के लिए माना जाता है और यद्यपि महल इस्लामी प्रोटोटाइप के अनुसार नियोजित था, प्रत्येक मंडप में वास्तुशिल्प तत्व शामिल हैं, जो मुगल इमारतों की विशिष्टता हैं, जो कि तिमुरीद और फारसी परंपराओं का मिश्रण दर्शाते हैं। लाल किले की आधुनिक वास्तुकला शैली, इसके बगीचे डिजाइन सहित, बाद में दिल्ली, राजस्थान, पंजाब, कश्मीर, ब्रज, रोहिलखंड और अन्य जगहों पर इमारतों और उद्यानों को प्रभावित करती है।</string>
    <string name="japanies">レッド・フォートは1648年、ムガール帝国の第5代シャー・ジャハンによって城に建てられました。赤い砦は赤い砦であるその名前のために完全に赤い石でできていました。 1546年にイスラム・シャー・スーリによって建てられたサリムガル砦のように、レッド・フォートも建設されました。この美しい要塞劇場では、水路に接続されたステージが作られ、Canal-e-Bahurshと呼ばれています。</string>
    <string name="french">"Le Fort Rouge est un fort historique dans la ville de Delhi. Il a été la résidence principale des empereurs de la dynastie moghole pendant près de 200 ans, jusqu en 1856. Il est situé dans le centre de Delhi et abrite un certain nombre de musées. En plus d accueillir les empereurs et leurs familles, c était le centre cérémoniel et politique de l État moghol et le cadre des événements ayant un impact critique sur la région.Construit en 1639 par le cinquième empereur moghol Shah Jahan comme le palais de sa capitale fortifiée Shahjahanabad, le Fort Rouge est nommé pour ses murs de grès rouge et est adjacent à l ancien fort Salimgarh, construit par l islam Shah Suri en 1546. Le Les appartements impériaux se composent d une rangée de pavillons, reliés par un canal d eau connu sous le nom de ruisseau du paradis (Nahr-i-Bihisht). Le complexe du fort est considéré comme le zénith de la créativité moghole sous Shah Jahan et bien que le palais ait été conçu selon des prototypes islamiques, chaque pavillon contient des éléments architecturaux typiques des bâtiments moghols qui reflètent une fusion des traditions timurides et persanes. Le style architectural innovant du Fort Rouge, y compris sa conception de jardin, a influencé les bâtiments et les jardins de Delhi, du Rajasthan, du Pendjab, du Cachemire, de Braj, de Rohilkhand et d'ailleurs."</string>
    <string name="spanish">"El Fuerte Rojo es un fuerte histórico en la ciudad de Delhi. Fue la residencia principal de los emperadores de la dinastía Mughal durante casi 200 años, hasta 1856. Se encuentra en el centro de Delhi y alberga una serie de museos. Además de acomodar a los emperadores y sus hogares, era el centro ceremonial y político del estado de Mughal y el escenario de eventos que impactaban de manera crítica en la región.Construido en 1639 por el quinto emperador mogol Shah Jahan como el palacio de su capital fortificada Shahjahanabad, el Fuerte Rojo recibe su nombre por sus paredes masivas de arenisca roja y se encuentra junto al antiguo fuerte de Salimgarh, construido por Islam Shah Suri en 1546. El Los apartamentos imperiales consisten en una fila de pabellones, conectados por un canal de agua conocido como el Arroyo del Paraíso (Nahr-i-Bihisht). Se considera que el complejo del fuerte representa el cenit de la creatividad de Mughal bajo Shah Jahan y, aunque el palacio fue planeado de acuerdo con prototipos islámicos, cada pabellón contiene elementos arquitectónicos típicos de los edificios de Mughal que reflejan una fusión de tradiciones timúridas y persas. El estilo arquitectónico innovador del Fuerte Rojo, incluido su diseño de jardín, influyó en edificios y jardines posteriores en Delhi, Rajasthan, Punjab, Cachemira, Braj, Rohilkhand y otros lugares."</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="otp">Enter Otp</string>
    <string name="empty_description">No description available.</string>
    <string name="sample_state">Delhi</string>
</resources>