<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_primary"
    tools:context=".activities.ForgotPassword">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/et_shape"
        android:hint="@string/Username"
        android:textColorHint="#ffffff"
        android:inputType="textEmailAddress"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="98dp"
        android:background="@drawable/et_shape"
        android:ems="10"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:hint="@string/Password"
        android:textColorHint="#ffffff"
        android:inputType="textPassword"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/cpassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="151dp"
        android:background="@drawable/et_shape"
        android:ems="10"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:hint="@string/repeat_password"
        android:textColorHint="#ffffff"
        android:inputType="textPassword"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="205dp"
        android:background="@drawable/et_shape"
        android:ems="10"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:hint="@string/otp"
        android:textColorHint="#ffffff"
        android:inputType="text"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="238dp"
        android:background="@drawable/et_shape"
        android:text="Submit"
        android:textColor="#ffffff"
        />
</RelativeLayout>