<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="tie.hackathon.travelguide.destinations.description.FinalCityInfo">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:contentDescription="@string/empty_description"
            android:scaleType="centerCrop"
            />


        <TextView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-bold"
            android:padding="10dp"
            android:text="@string/sample_state"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />


            <TextView
                android:id="@id/expandable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#666666"
                android:text="@string/akshardham_hint"
                android:textSize="16sp" />


 <!--       <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow_1"
            android:backgroundTint="#000000"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/empty_description"
                    android:src="@drawable/ic_cloud_black_48dp" />


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    tools:ignore="RtlCompat">

                    <TextView
                        android:id="@+id/temp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/max_text"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/humidit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1.0"
                            android:text="@string/min_text"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/weatherinfo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1.0"
                            android:text="@string/min_text"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
-->


        <TextView
            android:id="@+id/more"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="280dp"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/listen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/shadow_1"
                android:backgroundTint="#000000"
                android:orientation="horizontal"
                android:padding="20dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/empty_description"
                    android:src="@drawable/ic_headset_black_24dp" />

                <TextView
                    android:id="@+id/fftext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="Listen"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout

                android:id="@+id/hangout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/shadow_1"
                android:backgroundTint="#000000"
                android:orientation="horizontal"
                android:padding="20dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/empty_description"
                    android:src="@drawable/hotel" />

                <TextView
                    android:id="@+id/hgtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="Hotels"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout

                android:id="@+id/sight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/shadow_1"
                android:backgroundTint="#000000"
                android:orientation="horizontal"
                android:padding="20dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/empty_description"
                    android:src="@drawable/mapmarker" />

                <TextView
                    android:id="@+id/mntext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="Sights"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/shoppp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/shadow_1"
                android:backgroundTint="#000000"
                android:orientation="horizontal"
                android:padding="20dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/empty_description"
                    android:src="@drawable/shops" />

                <TextView
                    android:id="@+id/shtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="Shopping"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/restau"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/shadow_1"
                android:backgroundTint="#000000"
                android:orientation="horizontal"
                android:padding="20dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/empty_description"
                    android:src="@drawable/resta" />

                <TextView
                    android:id="@+id/rstext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="Restaurants"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/activities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/shadow_1"
                android:backgroundTint="#000000"
                android:orientation="horizontal"
                android:padding="20dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/empty_description"
                    android:src="@drawable/hangout" />

                <TextView
                    android:id="@+id/cttext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="Hangout"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>